# lateral

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
spec/: x86_64-lateral.json
src/: lib.rs  main.rs  test.rs
src/alloc/: block.rs  global.rs  heap.rs  mod.rs
src/cpu/: gdt.rs  interrupt.rs  mod.rs
src/fs/: file.rs  mod.rs
src/future/: exec.rs  mod.rs  task.rs
src/future/io/: mod.rs  ps2.rs
src/gui/: mod.rs  wm.rs
src/gui/lgtk/: mod.rs  size.rs  util.rs
src/gui/lgtk/widgets/: header.rs  mod.rs  string.rs
src/io/: keybindings.rs  logging.rs  mod.rs  qemu.rs  serial.rs  vga_buffer.rs
src/mem/: frame.rs  mod.rs  paging.rs
src/syscall/: mod.rs  service.rs
src/thread/: mod.rs  ps2.rs  queue.rs
src/time/: cmos.rs  mod.rs  rtc.rs
src/util/: byte.rs  mod.rs
tests/: should_panic.rs
