[package]
edition = "2018"
name = "lateral"
version = "0.2.2"

[dependencies]
linked_list_allocator = "0.9.0"
micromath = "2.0.0"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.9.1"
uart_16550 = "0.2"
x86_64 = "0.14"

[dependencies.logos]
default-features = false
features = ["export_derive"]
version = "0.12"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4.0"

[dependencies.bootloader]
features = ["map_physical_memory"]
version = "0.9.8"

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "0.2"

[dependencies.conquer-once]
default-features = false
version = "0.3"

[dependencies.futures-util]
default-features = false
features = ["alloc"]
version = "0.3"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 5

[[test]]
harness = false
name = "should_panic"
